// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState should render empty state component styles of type error 1`] = `
<div
  className="css-agajyl"
  direction="row"
  width="100%"
>
  <p
    className="css-1psrz88"
    fontFamily="IBM Plex Sans"
    fontStyle="italic"
  >
    There is nothing here
  </p>
</div>
`;

exports[`EmptyState should render empty state component styles of type loading 1`] = `
<div
  className="css-agajyl"
  direction="row"
  width="100%"
>
  <p
    className="css-1nejjin"
    fontFamily="IBM Plex Sans"
    fontStyle="none"
  >
    loading...
  </p>
</div>
`;

exports[`EmptyState should render empty state component styles of type other 1`] = `
<div
  className="css-agajyl"
  direction="row"
  width="100%"
>
  <p
    className="css-1psrz88"
    fontFamily="IBM Plex Sans"
    fontStyle="italic"
  >
    There is nothing here
  </p>
</div>
`;
